fix(ClientUtil): print availablePositions first, so they don't cover corners and print correctly format resources